--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
         <h1>Week 2 blog</h1>
         <p>I have learnt html!</p>
         <!-- <img src=""> -->
+
+        <section>
+            <h3>My Likes</h3>
+            <li>
+                <ul>Tea</ul>
+                <ul>Sweets</ul>
+                <ul>Sleep</ul>
+                <ul>Music</ul>
+            </li>
+        </section>
     </body>
     <footer>
 
