modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>My HTML, CSS & JavaScript learning blog</title>
     </head>
     <body>
         <h1>Week 2 blog</h1>
@@ -8,6 +9,13 @@
         <!-- <img src=""> -->
 
         <section>
+            <h2>Ordered & Unordered Lists</h2>
+            <h3>My Favourite Characters</h3>
+            <li>
+                <ol>Gojo</ol>
+                <ol>Kangel</ol>
+                <ol>My ocs</ol>
+            </li>
             <h3>My Likes</h3>
             <li>
                 <ul>Tea</ul>
@@ -16,6 +24,54 @@
                 <ul>Music</ul>
             </li>
         </section>
+
+        <h1>Week 3 blog</h1>
+        <p>I have learnt about forms and alignment. flexboxes!</p>
+        <h2>Forms</h2>
+        <div>
+            <form>
+                <h3>Input boxes</h3>
+                <label for="color">Pick a colour you like!</label>
+                <input type="color">
+                <br>
+                <label for="text">Share anything here</label>
+                <input type="text" placeholder="what's on your mind?">
+                <br>
+                <label for="date">What's the date today?</label>
+                <input type="date">
+                <br>
+                <label for="time">What's the time now?</label>
+                <input type="time">
+                <br><br>
+
+                <h3>Radio buttons</h3>
+                <p>Pick a drink:</p>
+                <input type="radio">
+                <label>Coffee</label><br>
+                <input type="radio">
+                <label>Tea</label><br>
+                <input type="radio">
+                <label>Water</label><br>
+                <input type="radio">
+                <label>Milkshake</label>
+
+                <br>
+                <h3>Checkboxes</h3>
+                <p>Pick a sweet treat:</p>
+                <input type="checkbox">
+                <label> Cookies</label><br>
+                <input type="checkbox">
+                <label> Donuts</label><br>
+                <input type="checkbox">
+                <label> Cake</label>
+                <br><br>
+
+                <label>Comments:</label><br>
+                <textarea rows="4" cols="50" placeholder="Enter your comments here"></textarea>
+                <br>
+                <input type="submit" value="Submit Form">
+        </div>
+
     </body>
     <footer>
 
