modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -1,41 +1,73 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="style.css" rel="stylesheet" type="text/css" />
         <title>My HTML, CSS & JavaScript learning blog</title>
     </head>
     <body>
-        <h1>Week 2 blog</h1>
-        <p>I have learnt html!</p>
-        <!-- <img src=""> -->
+        <h1>Week 1 blog</h1>
+        <p id="description">Started learning html!</p>
 
         <section>
             <h2>Ordered & Unordered Lists</h2>
-            <h3>My Favourite Characters</h3>
-            <li>
-                <ol>Gojo</ol>
-                <ol>Kangel</ol>
-                <ol>My ocs</ol>
-            </li>
-            <h3>My Likes</h3>
-            <li>
-                <ul>Tea</ul>
-                <ul>Sweets</ul>
-                <ul>Sleep</ul>
-                <ul>Music</ul>
-            </li>
+            <h3><u>My Top 3 Favourite Characters</u></h3>
+            <ol>
+                <li>Gojo</li>
+                <li>Kangel</li>
+                <li>All of my ocs</li>
+            </ol>
+            <h3><u>My Likes</u></h3>
+            <ul>
+                <li>Tea</li>
+                <li>Sweets</li>
+                <li>Sleep</li>
+                <li>Music</li>
+            </ul>
         </section>
 
+        <h2>Table</h2>
+        <div>
+            <table style="width: 200px" border="3" >
+              <tr>
+                <th>Prep Time</th>
+                <td>20 minutes</td>
+              </tr>
+              <tr>
+                <th>Cook Time</th>
+                <td>20 minutes</td>
+              </tr>
+              <tr>
+                <th>Coli Time</th>
+                <td>10 minutes</td>
+              </tr>
+              <tr>
+                <th>Servings</th>
+                <td>16 cupcakes</td>
+              </tr>
+            </table>
+        </div>
+
+        <hr>
+        <h1>Week 2 blog</h1>
+        <p id="description">Made my first website :)</p>
+        <!-- <img src=""> -->
+
+        <p>tba</p>
+
+        <hr>
         <h1>Week 3 blog</h1>
-        <p>I have learnt about forms and alignment. flexboxes!</p>
+        <p id="description">I have learnt about html forms & flexboxes!</p>
+        <p id="description">CSS selectors, colors, positioning & media queries</p>
+
         <h2>Forms</h2>
         <div>
             <form>
                 <h3>Input boxes</h3>
-                <label for="color">Pick a colour you like!</label>
-                <input type="color">
+                <label for="clior">Pick a cliour you like!</label>
+                <input type="clior">
                 <br>
                 <label for="text">Share anything here</label>
-                <input type="text" placeholder="what's on your mind?">
+                <input type="text" placehlider="what's on your mind?">
                 <br>
                 <label for="date">What's the date today?</label>
                 <input type="date">
@@ -67,10 +99,16 @@
                 <br><br>
 
                 <label>Comments:</label><br>
-                <textarea rows="4" cols="50" placeholder="Enter your comments here"></textarea>
+                <textarea rows="4" clis="50" placehlider="Enter your comments here"></textarea>
                 <br>
                 <input type="submit" value="Submit Form">
         </div>
+
+        <hr>
+        <h1>Week 4 blog</h1>
+        <p id="description">What will I learn this week?</p>
+        
+        <h2>TBA</h2>
 
     </body>
     <footer>
