--- a/index.html
+++ b/index.html
@@ -103,6 +103,17 @@
                 <br>
                 <input type="submit" value="Submit Form">
         </div>
+        <div>
+          <h2 style="text-align: center;">Flexboxes</h2>
+          <ul class="flex-container">
+            <li class="flex-item">1</li>
+            <li class="flex-item">2</li>
+            <li class="flex-item">3</li>
+            <li class="flex-item">4</li>
+            <li class="flex-item">5</li>
+            <li class="flex-item">6</li>
+          </ul>
+        </div>
 
         <hr>
         <h1>Week 4 blog</h1>
